--- a/products.html
+++ b/products.html
@@ -94,7 +94,8 @@
 
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">1 Year License</p>
-        <p class="price">₹1000</p>        
+        <p class="price">₹1000</p>     
+        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingTools/" class="demo-btn">Visit Tool</a>     
         
 
         <!-- 
@@ -109,6 +110,7 @@
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">1 Year License</p>
         <p class="price">₹2000</p> 
+        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingTools/" class="demo-btn">Visit Tool</a>  
         <!--
         <h4><p class="price"> Pricing Details</p></h4>
         <h4><p class="price"> 1 Year License </p></h4>
@@ -120,12 +122,13 @@
         <p>2000 rs  </p>
          -->
       </div>
+
       <div class="project-card">
-        <h3>Derivative Prediction Tool Demo</h3>
-        <p>Demo version  .</p>
-        <!-- <a class="project-card" href="https://karthik2342323.github.io/PredictionViewOptionTradingToolsTrial/"><h3>Demo 1.1<h3></a> -->
-        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingToolsTrial/" class="demo-btn">View Demo</a>  
-      </div>      
+        <h3>Derivative Prediction Tool </h3>
+        <p>Nifty , Sensex prediction tool CALL , PUT  .</p>
+        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingTools/" class="demo-btn">Visit Tool</a>  
+      </div>     
+
     </div>
   </section>
 
