--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
       <div class="project-card">
         <h3>FINNIFTY</h3>
-        <img src="option.png?text=Finnifty+Chart" alt="Finnifty Chart" style="width:100%; border-radius:8px;">
+        <img src="d.png?text=Finnifty+Chart" alt="Finnifty Chart" style="width:100%; border-radius:8px;">
       </div>
     </div>
   </section>
