--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
   background: #005fa3;
 }
 
+    .demo-btn {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #0077cc;
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    .demo-btn:hover {
+      background: #005fa3;
+    }
+
   </style>
 </head>
 <body>
@@ -97,8 +110,14 @@
         <h3>FINNIFTY</h3>
         <img src="d.png?text=Finnifty+Chart" alt="Finnifty Chart" style="width:100%; border-radius:8px;">
       </div>
+      <!--
+      <div class="project-card">
+        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingTools/" class="demo-btn">Visit Tool</a> 
+      </div>
+      -->      
     </div>
   </section>
+
 
   <!-- Advisory Section -->
 
