--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 
   <!-- Index Section -->
   <section>
-    <h2>Market Index Overview</h2>
+    <!-- <h2>Market Index Overview</h2> -->
+    <h2>Our Tool Cover All Index including commodities CALL PUT prices</h2>
     <div class="projects">
       <div class="project-card">
         <h3>NIFTY 50</h3>
