--- a/services.html
+++ b/services.html
@@ -89,7 +89,7 @@
         <p>Tool setup, and monthly analysis reports , Nifty index , tool range 20 80</p>
         <h4 class="price-title">Pricing Details</h4>
         <p class="price">₹1000/year </p>
-      </div>
+      </div><br><br>
        
        <!--
 
@@ -113,13 +113,13 @@
         <p>Trading calls , software access , Nifty , Sensex , Bank Nifty </p>
         <h4 class="price-title">Pricing Details</h4>
         <p class="price">₹600/month </p>            
-      </div>
+      </div><br><br>
       <div class="project-card">
         <h3>Stock Advisory  </h3>
         <p> Stock Long term holding Equity Return rewards . </p>
         <h4 class="price-title">Pricing Details</h4>
         <p class="price">₹600 per stock  </p>         
-      </div>
+      </div><br><br>
 
     </div>
   </section>
