--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Option Trading Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+   <!-- Favicon -->
+<!--<link rel="icon" type="image/jpeg" href="morgan_stanley_logo.jpg">-->
+
   <style>
 .projects {
   display: flex;
@@ -66,6 +69,8 @@
     }
 
   </style>
+
+
 </head>
 <body>
 
@@ -81,6 +86,7 @@
     <a href="index.html" class="active">Home</a>
     <a href="products.html">Products</a>
     <a href="services.html">Services</a>
+    <a href="course.html">Course</a>    
     <a href="about.html">About</a>
   </div>
 
@@ -93,7 +99,7 @@
   <!-- Index Section -->
   <section>
     <!-- <h2>Market Index Overview</h2> -->
-    <h2>Our Tool Cover All Index including commodities CALL PUT prices</h2>
+    <h2>Our Tool Cover All Index including commodities CALL PUT prices </h2>
     <div class="projects">
       <div class="project-card">
         <h3>NIFTY 50</h3>
