--- a/about.html
+++ b/about.html
@@ -74,6 +74,7 @@
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="services.html">Services</a>
+    <a href="course.html">Course</a>    
     <a href="about.html" class="active">About</a>
   </div>
 
