--- a/services.html
+++ b/services.html
@@ -74,6 +74,7 @@
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="services.html" class="active">Services</a>
+    <a href="course.html">Course</a>    
     <a href="about.html">About</a>
   </div>
 
