--- a/about.html
+++ b/about.html
@@ -75,6 +75,7 @@
     <a href="products.html">Products</a>
     <a href="services.html">Services</a>
     <a href="course.html">Course</a>    
+    <a href="carrier.html">Carrier</a>    
     <a href="about.html" class="active">About</a>
   </div>
 
