--- a/course.html
+++ b/course.html
@@ -75,7 +75,8 @@
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="services.html">Services</a>
-    <a href="course.html" class="active">Course</a>    
+    <a href="course.html" class="active">Course</a>   
+    <a href="carrier.html">Carrier</a>     
     <a href="about.html">About</a>
   </div>
 
