--- a/services.html
+++ b/services.html
@@ -74,7 +74,8 @@
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="services.html" class="active">Services</a>
-    <a href="course.html">Course</a>    
+    <a href="course.html">Course</a>
+    <a href="carrier.html">Carrier</a>        
     <a href="about.html">About</a>
   </div>
 
