--- a/carrier.html
+++ b/carrier.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Products - Option Trading Solutions</title>
+  <title>Carrier - Option Trading Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
    <style>
