--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
 
   <!-- Navbar -->
   <div class="navbar">
-    <h1>Services - Option Trading Solutions</h1>
+    <h1>Prediction View Option Trading Solutions</h1>
     <div class="menu-icon" onclick="toggleMenu()">☰</div>
   </div>
 
