--- a/course.html
+++ b/course.html
@@ -88,7 +88,25 @@
 
 
   <section>
-    <h2>Our Trading Course </h2>
+    <h2>Our Course </h2>
+    <div class="projects">      
+      <div class="project-card">        
+        <h3>Master of Business Administration (MBA) , Private Program</h3>
+        <p>Marketing Analytics</p>
+        <p>Marketing and Business Strategy</p>
+        <p>Business Models</p>
+        <p>Segmentation Strategies</p>
+        <p>Predictive Analytics</p>
+        <p>Pricing Analytics</p>
+        <p>Business & Operational Strategy</p>        
+        <h4 class="price-title">Pricing Details</h4>
+        <p class="price-sub">12 Month Course</p>
+        <p class="price">₹1000</p>     
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklqHB6xX7cjO9AbFmUt8AeEUO290_wX8FKDOM3q5b4FiyMw/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Join Now</a>     
+
+    </div>   
+
+    <!--
     <div class="projects">      
       <div class="project-card">
         <h3>Nifty Derivative Course - Basic</h3>
@@ -98,8 +116,35 @@
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklqHB6xX7cjO9AbFmUt8AeEUO290_wX8FKDOM3q5b4FiyMw/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Join Now</a>     
 
     </div>
+  -->     
+
   </section>
 
+
+<!--
+
+  <section>
+    <h2>Our Trading Course </h2>
+    <div class="projects">      
+      <div class="project-card">        
+        <h3>Master of Business Administration (MBA) , Private Program</h3>
+        <p>Marketing Analytics</p>
+        <p>Marketing and Business Strategy</p>
+        <p>Business Models</p>
+        <p>Segmentation Strategies</p>
+        <p>Predictive Analytics</p>
+        <p>Pricing Analytics</p>
+        <p>Business & Operational Strategy</p>        
+        <h4 class="price-title">Pricing Details</h4>
+        <p class="price">₹1000</p>     
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklqHB6xX7cjO9AbFmUt8AeEUO290_wX8FKDOM3q5b4FiyMw/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Join Now</a>     
+
+    </div>    
+
+
+  </section>
+
+-->  
 
 
 
