--- a/services.html
+++ b/services.html
@@ -86,6 +86,8 @@
 
       <div class="project-card">
 
+      <!--  
+
       <div class="project-card">
         <h3>Basic Service</h3>
         <p>Tool setup, and monthly analysis reports , Nifty index , tool range 20 80</p>
@@ -93,34 +95,24 @@
         <p class="price">₹1000/year </p>
       </div><br><br>
        
-       <!--
-
-        <h3>Forecasting Services</h3>
-        <p>Advanced market analysis , Reports , Software access range 20 70, Nifty index</p>
-        <h4 class="price-title">Pricing Details</h4>
-        <p class="price">₹400/year </p>        
-      </div>  
-
-      -->    
-
-      <!--
-      <div class="project-card">
-        <h3>Premium Service</h3>
-        <p>Full support, real-time data integration, and advanced market analysis with dedicated assistance.</p>
-      </div>
-      -->
+       -->
 
       <div class="project-card">
         <h3>Derivative Advisory </h3>
-        <p>Trading calls , software access , Nifty , Sensex , Bank Nifty </p>
+        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price">₹600/month </p>            
+        <!-- <p class="price">₹1000/year </p>  -->  
+        <p class="price">₹1000 one time pay </p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
+
+
       <div class="project-card">
         <h3>Stock Advisory  </h3>
-        <p> Stock Long term holding Equity Return rewards . </p>
+        <p> Stock Long term holding Equity Return rewards . We are expert in Equity research and return will be good for long term holdings . </p>
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price">₹600 per stock  </p>         
+        <p class="price">₹1000 one time pay </p> 
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
 
     </div>
