--- a/services.html
+++ b/services.html
@@ -98,7 +98,7 @@
        -->
       <div class="project-card">
         <h3>Derivative Advisory Group </h3>
-        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>    
+        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>    
         <a href="https://chat.whatsapp.com/F9MXufEdMq43zD4vq9JQ5Y?mode=ems_copy_c" class="demo-btn">Join Now</a>                     
       </div><br><br>       
 
