--- a/FutureAndOptions.html
+++ b/FutureAndOptions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Services - Option Trading Solutions</title>
+  <title>F&O - Option Trading Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
      <style>
@@ -73,8 +73,8 @@
     <div class="close-btn" onclick="toggleMenu()">✖</div>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
-    <a href="services.html" class="active">Services</a>
-    <a href="FutureAndOptions.html">F&O</a>           
+    <a href="services.html">Services</a>
+    <a href="FutureAndOptions.html" class="active">F&O</a>           
     <a href="course.html">Course</a>
     <a href="carrier.html">Carrier</a>        
     <a href="about.html">About</a>
@@ -82,7 +82,7 @@
 
   <!-- Services Content -->
   <section>
-    <h2>Our Service Plans</h2>
+    <h2>Future and Option Products</h2>
     <div class="projects">
 
       <div class="project-card">
@@ -98,19 +98,24 @@
        
        -->
       <div class="project-card">
-        <h3>Derivative Advisory Group </h3>
+        <h3>Derivative Calls </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>    
-        <a href="https://chat.whatsapp.com/F9MXufEdMq43zD4vq9JQ5Y?mode=ems_copy_c" class="demo-btn">Join Now</a>                     
-      </div><br><br>       
+        <a href="https://drive.google.com/file/d/1J7GnTmKjmkx_SF5e8EF4DWSsFudKeYji/view?usp=sharing" class="demo-btn">View Now</a>
+        <a href="https://drive.usercontent.google.com/uc?id=1J7GnTmKjmkx_SF5e8EF4DWSsFudKeYji&export=download" class="demo-btn">Download Now</a>                     
+      </div><br><br>      
+
+      <!-- 
 
       <div class="project-card">
         <h3>Derivative Advisory </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>
         <h4 class="price-title">Pricing Details</h4>
-        <!-- <p class="price">₹1000/year </p>  -->  
+      
         <p class="price">₹1000 one time pay </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
+
+
 
 
       <div class="project-card">
@@ -120,6 +125,8 @@
         <p class="price">₹1000 one time pay </p> 
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
+
+       -->
 
     </div>
   </section>
