--- a/course.html
+++ b/course.html
@@ -75,6 +75,7 @@
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="services.html">Services</a>
+    <a href="FutureAndOptions.html">F&O</a>     
     <a href="course.html" class="active">Course</a>   
     <a href="carrier.html">Carrier</a>     
     <a href="about.html">About</a>
