--- a/FutureAndOptions.html
+++ b/FutureAndOptions.html
@@ -48,7 +48,8 @@
      }    
     .demo-btn {
       display: inline-block;
-      padding: 10px 20px;
+      /*padding: 10px 20px;*/
+      padding: 7px 14px;
       background: #0077cc;
       color: #fff;
       border-radius: 6px;
@@ -100,7 +101,7 @@
       <div class="project-card">
         <h3>Derivative Calls </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>    
-        <a href="https://drive.google.com/file/d/1J7GnTmKjmkx_SF5e8EF4DWSsFudKeYji/view?usp=sharing" class="demo-btn">View Now</a>
+        <a href="https://drive.google.com/file/d/1J7GnTmKjmkx_SF5e8EF4DWSsFudKeYji/view?usp=sharing" class="demo-btn">View Now</a>     
         <a href="https://drive.usercontent.google.com/uc?id=1J7GnTmKjmkx_SF5e8EF4DWSsFudKeYji&export=download" class="demo-btn">Download Now</a>                     
       </div><br><br>      
 
