--- a/course.html
+++ b/course.html
@@ -89,10 +89,11 @@
 
 
   <section>
-    <h2>Our Course </h2>
+<!--    <h2>Our Course </h2> -->
     <div class="projects">      
       <div class="project-card">        
-        <h3>Master of Business Administration (MBA) , Private Program</h3>
+        <h3>Master of Business Administration (MBA) , Private Program                                                       </h3>
+        <p>Nifty Trading Course 12 month , 1 year license Nifty software access CALL , PUT range 20 to 100  ,  Weekly Reports .  </p>      
         <p>Marketing Analytics</p>
         <p>Marketing and Business Strategy</p>
         <p>Business Models</p>
@@ -107,7 +108,8 @@
 
     </div>   
 
-    <!--
+<!--
+
     <div class="projects">      
       <div class="project-card">
         <h3>Nifty Derivative Course - Basic</h3>
@@ -117,9 +119,27 @@
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklqHB6xX7cjO9AbFmUt8AeEUO290_wX8FKDOM3q5b4FiyMw/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Join Now</a>     
 
     </div>
-  -->     
+
+-->    
+ 
 
   </section>
+
+  <section>
+
+
+    <div class="projects">      
+      <div class="project-card">
+        <h3>Nifty Derivative Course</h3>
+        <p>Nifty Trading Course 12 month , 1 year license Nifty software access CALL , PUT range 20 to 100  ,  Weekly Reports .  </p>
+        <h4 class="price-title">Pricing Details</h4>
+        <p class="price">₹1000</p>     
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOf76pbqeLDVwZ2yv7Vg3l4sleP1QtnViaoFmUxRP-xUKXDw/viewform?usp=header" class="demo-btn">Join Now</a>     
+
+    </div>
+ 
+
+  </section>  
 
 
 <!--
