--- a/products.html
+++ b/products.html
@@ -323,6 +323,26 @@
   </section>
 
 
+  <section>
+
+    <div class="projects">
+
+      <div class="project-card">
+        <h3>Derivative Prediction Tool Commodities</h3>
+        <p>Advanced prediction commodities tool CALL PUT  . Range cover CALL PUT 20 - 5000 , 2 Year License  , ML Trained Model.</p>
+        <h4 class="price-title">Pricing Details</h4>
+        <p class="price-sub">2 Year License</p>
+        <p class="price">₹5000</p> 
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd2sqYrQHj9bKkGeSl3tBD9D-b4fKcBMPcDRstMJhu1ZBHlcA/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Buy Now</a>  
+       
+      </div>
+
+
+
+    </div>
+  </section>
+
+
 
 
 <!--
