--- a/FutureAndOptions.html
+++ b/FutureAndOptions.html
@@ -105,6 +105,12 @@
         <a href="https://drive.usercontent.google.com/uc?id=1J7GnTmKjmkx_SF5e8EF4DWSsFudKeYji&export=download" class="demo-btn">Download Now</a>                     
       </div><br><br>      
 
+      <div class="project-card">
+        <h3>Nifty Reports </h3>
+        <p>Nifty Reports weekly </p>    
+        <a href="https://drive.google.com/file/d/14gEQmljRH9sl9LkVhw86lKy6a59_seQS/view?usp=sharing" class="demo-btn">View Now</a>     
+        <a href="https://drive.usercontent.google.com/uc?id=14gEQmljRH9sl9LkVhw86lKy6a59_seQS&export=download" class="demo-btn">Download Now</a>                     
+      </div><br><br>    
       <!-- 
 
       <div class="project-card">
