--- a/products.html
+++ b/products.html
@@ -98,7 +98,7 @@
 
       <div class="project-card">
         <h3>Derivative Prediction Tool - Basic Trial Edition </h3>
-        <p>Sensex Nifty prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 40   , 10 Days Trial , ML Trained Model </p>
+        <p>Nifty prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 40   , 10 Days Trial , ML Trained Model </p>
 
         
         <h4 class="price-title">Trial version</h4>
@@ -110,7 +110,7 @@
 
       <div class="project-card">
         <h3>Derivative Prediction Tool - Basic Trial Edition Version 1.2 </h3>
-        <p>Sensex Nifty prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 40   , 10 Days Trial , ML Trained Model </p>
+        <p>Nifty Sensex prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 40   , 10 Days Trial , ML Trained Model </p>
 
         
         <h4 class="price-title">Trial version</h4>
@@ -143,7 +143,7 @@
 
       <div class="project-card">
         <h3>Derivative Prediction Tool - Basic</h3>
-        <p>Sensex Nifty prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 200   . ML Trained Model </p>
+        <p>Nifty Sensex prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 200   . ML Trained Model </p>
         <!--
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">1 Month License</p>
@@ -178,8 +178,8 @@
     <div class="projects">
 
       <div class="project-card">
-        <h3>Derivative Prediction Tool - Premium</h3>
-        <p>Advanced prediction Sensex , Nifty , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 200 , 1 Year License  , ML Trained Model . </p>
+        <h3>Derivative Prediction Tool - Premium</h3  >
+        <p>Advanced prediction Nifty, Sensex , Crude Oil , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 200 , 1 Year License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">1 Year License</p>
         <p class="price">₹500</p> 
@@ -200,7 +200,7 @@
 
       <div class="project-card">
         <h3>Derivative Prediction Tool version commodities</h3>
-        <p>Advanced prediction Sensex , Nifty , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 5000 , 1 Year License  , ML Trained Model . </p>
+        <p>Advanced prediction Nifty , Sensex , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 5000 , 1 Year License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">1 Year License</p>
         <p class="price">₹1000</p> 
