--- a/FutureAndOptions.html
+++ b/FutureAndOptions.html
@@ -91,7 +91,7 @@
 
       <div class="project-card">
         <h3>Derivative Calls </h3>
-        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .Earning point 10,000 on nifty 50 index call , put . </p>  
+        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .Earning point 10,000 rs on nifty 50 index call , put . </p>  
                 
         <a href="https://drive.google.com/file/d/1J7GnTmKjmkx_SF5e8EF4DWSsFudKeYji/view?usp=sharing" class="demo-btn">View Now</a>     
         <a href="https://drive.usercontent.google.com/uc?id=1J7GnTmKjmkx_SF5e8EF4DWSsFudKeYji&export=download" class="demo-btn">Download Now</a> 
