--- a/course.html
+++ b/course.html
@@ -128,6 +128,26 @@
 
   </section>
 
+
+  <section>
+
+    <div class="projects">      
+      <div class="project-card">        
+        <h3>Digital Marketing , Private Program   </h3>
+        <p> 3 Month course   </p>      
+        <p> Making connection   </p>   
+        <p> Give Demo in Meet link  </p> 
+        <p> Complete client payment   </p>            
+        <h4 class="price-title">Pricing Details</h4>
+        <p class="price-sub">3 Month Course</p>
+        <p class="price">Free </p>     
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXQQBBMfswVQdHNNNfZzVopxV4IjvRtip0Jg5IgV42A4xcmg/viewform?usp=header" class="demo-btn">Join Now</a>     
+
+    </div>   
+
+ 
+
+  </section>
   
 
 
