--- a/services.html
+++ b/services.html
@@ -98,17 +98,23 @@
        
        -->
       <div class="project-card">
-        <h3>Derivative Advisory Group </h3>
+        <h3>Nifty Advisory Public Group WhatsApp </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>    
         <a href="https://chat.whatsapp.com/F9MXufEdMq43zD4vq9JQ5Y?mode=ems_copy_c" class="demo-btn">Join Now</a>                     
-      </div><br><br>       
+      </div><br><br>      
+
+      <div class="project-card">
+        <h3>Nifty Advisory Public Group Telegram </h3>
+        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>    
+        <a href="https://t.me/+zBtMsPrOgrY2NDQ1" class="demo-btn">Join Now</a>                     
+      </div><br><br>             
 
       <div class="project-card">
         <h3>Derivative Advisory </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price">₹1000/year </p>  -->  
-        <p class="price">₹1000 one time pay </p>
+        <p class="price">₹1000 Per Month</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
 
@@ -117,7 +123,7 @@
         <h3>Stock Advisory  </h3>
         <p> Stock Long term holding Equity Return rewards . We are expert in Equity research and return will be good for long term holdings . </p>
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price">₹1000 one time pay </p> 
+        <p class="price">₹1000 Per Month</p> 
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
 
