--- a/services.html
+++ b/services.html
@@ -97,6 +97,13 @@
       </div><br><br>
        
        -->
+
+      <div class="project-card">
+        <h3>Nifty Intraday Tips Youtube Channel</h3>
+        <p>Trading calls </p>    
+        <a href="https://www.youtube.com/@kartikmakwana6328" class="demo-btn">Join Now</a>                     
+      </div><br><br>      
+
       <div class="project-card">
         <h3>Nifty Advisory Public Group WhatsApp </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>    
@@ -107,13 +114,15 @@
         <h3>Nifty Advisory Public Group Telegram </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>    
         <a href="https://t.me/+zBtMsPrOgrY2NDQ1" class="demo-btn">Join Now</a>                     
-      </div><br><br>             
+      </div><br><br>            
+
+      <!-- 
 
       <div class="project-card">
         <h3>Derivative Advisory </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>
         <h4 class="price-title">Pricing Details</h4>
-        <!-- <p class="price">₹1000/year </p>  -->  
+        
         <p class="price">₹1000 Per Month</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
@@ -126,6 +135,8 @@
         <p class="price">₹1000 Per Month</p> 
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
+
+    -->
 
     </div>
   </section>
