--- a/services.html
+++ b/services.html
@@ -101,7 +101,13 @@
       <div class="project-card">
         <h3>Nifty Intraday Tips Youtube Channel</h3>
         <p>Trading calls </p>    
-        <a href="https://www.youtube.com/@kartikmakwana6328" class="demo-btn">Join Now</a>                     
+        <a href="https://www.youtube.com/@kartikmakwana6328/shorts" class="demo-btn">Join Now</a>                     
+      </div><br><br>      
+
+      <div class="project-card">
+        <h3>Nifty Intraday Tips Linkedin </h3>
+        <p>Trading calls </p>    
+        <a href="https://www.linkedin.com/in/karthik-makwana-8887b1145/" class="demo-btn">Join Now</a>                     
       </div><br><br>      
 
       <div class="project-card">
