--- a/about.html
+++ b/about.html
@@ -74,7 +74,8 @@
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="services.html">Services</a>
-    <a href="FutureAndOptions.html">F&O</a>        
+    <a href="FutureAndOptions.html">F&O</a>      
+    <a href="ResearchDevelopement.html">R&D</a>  
     <a href="course.html">Course</a>        
     <a href="carrier.html">Carrier</a>    
     <a href="about.html" class="active">About</a>
