--- a/FutureAndOptions.html
+++ b/FutureAndOptions.html
@@ -75,7 +75,8 @@
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="services.html">Services</a>
-    <a href="FutureAndOptions.html" class="active">F&O</a>           
+    <a href="FutureAndOptions.html" class="active">F&O</a>    
+    <a href="ResearchDevelopement.html">R&D</a>       
     <a href="course.html">Course</a>
     <a href="carrier.html">Carrier</a>        
     <a href="about.html">About</a>
