--- a/ResearchDevelopement.html
+++ b/ResearchDevelopement.html
@@ -73,9 +73,9 @@
     <div class="close-btn" onclick="toggleMenu()">✖</div>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
-    <a href="services.html" class="active">Services</a>
-    <a href="FutureAndOptions.html">F&O</a>       
-    <a href="ResearchDevelopement.html">R&D</a>     
+    <a href="services.html">Services</a>
+    <a href="FutureAndOptions.html">F&O</a>   
+    <a href="ResearchDevelopement.html" class="active">R&D</a>        
     <a href="course.html">Course</a>
     <a href="carrier.html">Carrier</a>        
     <a href="about.html">About</a>
@@ -83,7 +83,7 @@
 
   <!-- Services Content -->
   <section>
-    <h2>Our Service Plans</h2>
+    <h2>Nifty Research</h2>
     <div class="projects">
 
       <div class="project-card">
@@ -130,14 +130,27 @@
  
 
       <div class="project-card">
-        <h3>Derivative Advisory </h3>
-        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>
-        <h4 class="price-title">Pricing Details</h4>
+        <h3>Nifty Research for Small Trader 10,000 to 20,000</h3>
+        <p>Option Selection Range Call . </p>
+        <p>Nifty Select Range 55 to 57  </p>
+        <p>Nifty Rise in Price Moment 59 , 62 , 65 </p>
+        <p>Nifty Decline in Price Moment 53 , 50 , 47 </p> <br>
+
+        <p>Option Selection Range Put . </p>
+        <p>Nifty Select Range 50 to 54  </p>
+        <p>Nifty Rise in Price Moment 56 , 58  </p>
+        <p>Nifty Decline in Price Moment 48 , 46  </p>
+
         
-        <p class="price">₹1000 Per Month</p>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
+
+        <!--   
+
+        <a href="https://drive.google.com/file/d/1Ng5miYHnJuClojnH2ZaeveaLc211XR2h/view?usp=sharing" class="demo-btn">View SL and Target </a>   
+
+        -->                  
       </div><br><br>
 
+<!--
 
       <div class="project-card">
         <h3>Stock Advisory  </h3>
@@ -147,6 +160,7 @@
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
 
+-->
 
     </div>
   </section>
