--- a/ResearchDevelopement.html
+++ b/ResearchDevelopement.html
@@ -141,7 +141,7 @@
         <p>Nifty Rise in Price Moment 56 , 58  </p>
         <p>Nifty Decline in Price Moment 48 , 46  </p>
 
-        
+
 
         <!--   
 
@@ -149,6 +149,36 @@
 
         -->                  
       </div><br><br>
+
+
+      <div class="project-card">
+        <h3>Nifty Research for Mid Trader 100,000 to 200,000</h3>
+        <p>Option Selection Range Call . </p>
+        <p>Nifty Select Range  90 , 96   </p>
+        <p>Nifty Rise in Price Moment 100 , 104 , 108 </p>
+        <p>Nifty Decline in Price Moment 84 , 78  </p> <br>
+
+        <p>Option Selection Range Put . </p>
+        <p>Nifty Select Range 80 to 84 upto 88  </p>
+        <p>Nifty Rise in Price Moment 92 , 96   </p>
+        <p>Nifty Decline in Price Moment 76 , 72 upto 70   </p>
+
+
+
+        <!--   
+
+        <a href="https://drive.google.com/file/d/1Ng5miYHnJuClojnH2ZaeveaLc211XR2h/view?usp=sharing" class="demo-btn">View SL and Target </a>   
+
+        -->                  
+      </div><br><br>
+
+
+
+
+      <div class="project-card">
+        <h3>If U think its helpful consider donation 50 rs </h3>
+        <img src="paytm.jpeg?text=NIFTY+50+Chart" alt="Nifty 50 Chart" style="width:100%; border-radius:8px;">
+      </div><br><br>      
 
 <!--
 
