--- a/ResearchDevelopement.html
+++ b/ResearchDevelopement.html
@@ -176,7 +176,7 @@
 
 
       <div class="project-card">
-        <h3>If U think its helpful consider donation 50 rs </h3>
+        <h3>If U think its helpful consider donation 50 rs . Small amount help us to continue our research </h3>
         <img src="paytm.jpeg?text=NIFTY+50+Chart" alt="Nifty 50 Chart" style="width:100%; border-radius:8px;">
       </div><br><br>      
 
