--- a/ResearchDevelopement.html
+++ b/ResearchDevelopement.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Services - Option Trading Solutions</title>
+  <title>Research - Option Trading Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
      <style>
@@ -75,7 +75,8 @@
     <a href="products.html">Products</a>
     <a href="services.html">Services</a>
     <a href="FutureAndOptions.html">F&O</a>   
-    <a href="ResearchDevelopement.html" class="active">R&D</a>        
+    <a href="ResearchDevelopement.html" class="active">R&D</a> 
+    <a href="Donation.html">Donate Us </a>                
     <a href="course.html">Course</a>
     <a href="carrier.html">Carrier</a>        
     <a href="about.html">About</a>
