--- a/course.html
+++ b/course.html
@@ -77,6 +77,7 @@
     <a href="services.html">Services</a>
     <a href="FutureAndOptions.html">F&O</a>     
     <a href="ResearchDevelopement.html">R&D</a>
+    <a href="Donation.html">Donate Us </a>         
     <a href="course.html" class="active">Course</a>   
     <a href="carrier.html">Carrier</a>     
     <a href="about.html">About</a>
