--- a/ResearchDevelopement.html
+++ b/ResearchDevelopement.html
@@ -131,7 +131,7 @@
  
 
       <div class="project-card">
-        <h3>Nifty Research for Small Trader 10,000 to 20,000</h3>
+        <h3>Nifty Research for Small Trader 10,000 rs to 20,000 rs</h3>
         <p>Option Selection Range Call . </p>
         <p>Nifty Select Range 55 to 57  </p>
         <p>Nifty Rise in Price Moment 59 , 62 , 65 </p>
@@ -153,7 +153,7 @@
 
 
       <div class="project-card">
-        <h3>Nifty Research for Mid Trader 100,000 to 200,000</h3>
+        <h3>Nifty Research for Mid Trader 100,000 rs to 200,000 rs</h3>
         <p>Option Selection Range Call . </p>
         <p>Nifty Select Range  90 , 96   </p>
         <p>Nifty Rise in Price Moment 100 , 104 , 108 </p>
