--- a/ResearchDevelopement.html
+++ b/ResearchDevelopement.html
@@ -174,6 +174,42 @@
       </div><br><br>
 
 
+      <div class="project-card">
+
+        
+        <h3>Apply Profit Booking Nifty Sequence </h3>
+
+        <!--
+        <p>Option Selection Range Call . </p>
+        <p>Nifty Select Range  90 , 96   </p>
+        <p>Nifty Rise in Price Moment 100 , 104 , 108 </p>
+        <p>Nifty Decline in Price Moment 84 , 78  </p> <br>
+
+        <p>Option Selection Range Put . </p>
+        <p>Nifty Select Range 80 to 84 upto 88  </p>
+        <p>Nifty Rise in Price Moment 92 , 96   </p>
+        <p>Nifty Decline in Price Moment 76 , 72 upto 70   </p>
+
+      -->
+      <!-- 
+
+        Original frames width=560
+
+      -->
+
+      <p>
+        <iframe width="360" height="315" src="https://www.youtube.com/embed/J3f41ZNzAs0?si=qsUzINNMoKt-Nf4v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </p>
+
+
+
+        <!--   
+
+        <a href="https://drive.google.com/file/d/1Ng5miYHnJuClojnH2ZaeveaLc211XR2h/view?usp=sharing" class="demo-btn">View SL and Target </a>   
+
+        -->                  
+      </div><br><br>
+
 
 <!--
 
