--- a/ResearchDevelopement.html
+++ b/ResearchDevelopement.html
@@ -191,7 +191,7 @@
       <div class="project-card">
 
         
-        <h3>Get Expert in Global Index Trends </h3>
+        <h3>Get Expert in Global Index Trends , Get Course Today . </h3>
 
 
 
@@ -201,6 +201,15 @@
 
                
       </div><br><br>      
+
+      <div class="project-card">
+        <h3>Nifty Derivative Course, Global Trend Included </h3>
+        <p>Nifty Trading Course 12 month </p>
+        <h4 class="price-title">Pricing Details</h4>
+        <p class="price">₹800</p>     
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOf76pbqeLDVwZ2yv7Vg3l4sleP1QtnViaoFmUxRP-xUKXDw/viewform?usp=header" class="demo-btn">Join Now</a>     
+
+    </div><br><br>      
 
 
 <!--
