--- a/course.html
+++ b/course.html
@@ -96,9 +96,9 @@
     <div class="projects">      
       <div class="project-card">
         <h3>Nifty Derivative Course</h3>
-        <p>Nifty Trading Course 12 month , 1 year license Nifty software access CALL , PUT range 20 to 100  ,  Weekly Reports .  </p>
+        <p>Nifty Trading Course 3 month , 3 month license Nifty software access CALL , PUT range 20 to 100  , 3 month Weekly Reports .  </p>
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price">₹800</p>     
+        <p class="price">₹400</p>     
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOf76pbqeLDVwZ2yv7Vg3l4sleP1QtnViaoFmUxRP-xUKXDw/viewform?usp=header" class="demo-btn">Join Now</a>     
 
     </div>
