--- a/Donation.html
+++ b/Donation.html
@@ -168,7 +168,7 @@
 
 
       <div class="project-card">
-        <h3>Donate small amount to continue our research </h3>
+        <h3>Donate small amount to continue our research . Donate 12 rs</h3>
         <img src="paytm.jpeg?text=NIFTY+50+Chart" alt="Nifty 50 Chart" style="width:100%; border-radius:8px;">
       </div><br><br>      
 
