--- a/Donation.html
+++ b/Donation.html
@@ -168,7 +168,33 @@
 
 
       <div class="project-card">
-        <h3>Donate small amount to continue our research . Donate 12 rs</h3>
+        <h3>Donate small amount to continue our research .</h3>
+
+<h3>
+<label>
+  <input size="large" type="radio" name="choice" value="option1" id="radio1"> Donate 13 rs
+</label>
+
+</h3>
+
+<h3>
+<label>
+  <input type="radio" name="choice" value="option2" id="radio2"> Donate 15 rs
+</label>
+</h3>
+
+
+<h3>
+<label>
+  <input type="radio" name="choice" value="option2" id="radio2"> Donate 17 rs
+</label>
+</h3>
+
+<!--        
+        <h3><input type="radio" name="groupName" value="optionValue"> Donate 13 rs</h3>
+        <h3>Donate 19 rs</h3>
+
+-->        
         <img src="paytm.jpeg?text=NIFTY+50+Chart" alt="Nifty 50 Chart" style="width:100%; border-radius:8px;">
       </div><br><br>      
 
