--- a/Donation.html
+++ b/Donation.html
@@ -168,7 +168,9 @@
 
 
       <div class="project-card">
-        <h3>Donate small amount to continue our research .</h3>
+        <h3>Donate small amount to continue our research 12 rs . </h3>
+
+<!--        
 
 <h3>
 <label>
@@ -189,6 +191,7 @@
   <input type="radio" name="choice" value="option2" id="radio2"> Donate 17 rs
 </label>
 </h3>
+-->
 
 <!--        
         <h3><input type="radio" name="groupName" value="optionValue"> Donate 13 rs</h3>
