--- a/ResearchDevelopement.html
+++ b/ResearchDevelopement.html
@@ -221,14 +221,15 @@
       </div><br><br>    
 
 
-      <div class="project-card">
-        <h3>Nifty Derivative Course, Global Trend Included </h3>
-        <p>Nifty Trading Course 3 month </p>
-        <h4 class="price-title">Pricing Details</h4>
-        <p class="price">₹400</p>     
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOf76pbqeLDVwZ2yv7Vg3l4sleP1QtnViaoFmUxRP-xUKXDw/viewform?usp=header" class="demo-btn">Join Now</a>     
+    
 
-    </div><br><br>      
+
+      <div class="project-card">
+        <h3>Donate Small Amount to Prediction View Community </h3>
+        <p>Donate Small Amount 12 rs </p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdx-mjp5tpJDkv6SiXwhYn00NaeRZxpmRSLuh-W1Jt2ups6Cw/viewform?usp=header" class="demo-btn">Join Now</a>     
+
+    </div><br><br>    
 
 
 <!--
