--- a/ResearchDevelopement.html
+++ b/ResearchDevelopement.html
@@ -227,7 +227,7 @@
       <div class="project-card">
         <h3>Donate Small Amount to Prediction View Community </h3>
         <p>Donate Small Amount 12 rs </p>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdx-mjp5tpJDkv6SiXwhYn00NaeRZxpmRSLuh-W1Jt2ups6Cw/viewform?usp=header" class="demo-btn">Join Now</a>     
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdx-mjp5tpJDkv6SiXwhYn00NaeRZxpmRSLuh-W1Jt2ups6Cw/viewform?usp=header" class="demo-btn">Donate Now</a>     
 
     </div><br><br>    
 
