--- a/products.html
+++ b/products.html
@@ -87,6 +87,7 @@
 
  
 
+<!--
 
   <section>
     <h2>Our Trading Tools </h2>
@@ -95,6 +96,7 @@
 
 
   
+
 
 
 
@@ -135,11 +137,15 @@
     </div>
   </section>
 
+-->
+
 
   <section>
   <!--  <h2>Our Trading Tools</h2> -->
+      <h2>Our Trading Tools </h2>
 
     <div class="projects">
+
 
 
 
