--- a/course.html
+++ b/course.html
@@ -96,7 +96,7 @@
     <div class="projects">      
       <div class="project-card">
         <h3>Nifty Derivative Course</h3>
-        <p>Nifty Trading Course 1 month , 3 month license Nifty software access CALL , PUT range 20 to 100  , 3 month Weekly Reports .  </p>
+        <p>Nifty Trading Course 1 month , 3 month license Nifty software access CALL , PUT range 20 to 100 .   </p>
         <h4 class="price-title">Pricing Details</h4>
         <p class="price">₹400</p>     
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOf76pbqeLDVwZ2yv7Vg3l4sleP1QtnViaoFmUxRP-xUKXDw/viewform?usp=header" class="demo-btn">Join Now</a>     
@@ -138,12 +138,12 @@
     <div class="projects">      
       <div class="project-card">        
         <h3>Digital Marketing , Private Program   </h3>
-        <p> 3 Month course   </p>      
+        <p> 1 Month course   </p>      
         <p> Making connection   </p>   
         <p> Give Demo in Meet link  </p> 
         <p> Complete client payment   </p>            
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price-sub">3 Month Course</p>
+        <p class="price-sub">1 Month Course</p>
         <p class="price">Free </p>     
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXQQBBMfswVQdHNNNfZzVopxV4IjvRtip0Jg5IgV42A4xcmg/viewform?usp=header" class="demo-btn">Join Now</a>     
 
@@ -272,4 +272,5 @@
   </script>
 </body>
 </html>
+
 
