--- a/services.html
+++ b/services.html
@@ -120,13 +120,14 @@
         <a href="https://chat.whatsapp.com/F9MXufEdMq43zD4vq9JQ5Y?mode=ems_copy_c" class="demo-btn">Join Now</a>                     
       </div><br><br>      
 
+      
+
+      --> 
       <div class="project-card">
         <h3>Nifty Advisory Public Group Telegram </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>    
-        <a href="https://t.me/+zBtMsPrOgrY2NDQ1" class="demo-btn">Join Now</a>                     
-      </div><br><br>        
-
-      -->    
+        <a href="https://t.me/predictionview" class="demo-btn">Join Now</a>                     
+      </div><br><br>          
 
  
 
@@ -166,3 +167,4 @@
   </script>
 </body>
 </html>
+
