--- a/services.html
+++ b/services.html
@@ -136,7 +136,7 @@
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>
         <h4 class="price-title">Pricing Details</h4>
         
-        <p class="price">₹1000 One Time</p>
+        <p class="price">₹1000 One Time Pay</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
 
@@ -167,5 +167,6 @@
   </script>
 </body>
 </html>
+
 
 
