--- a/services.html
+++ b/services.html
@@ -145,7 +145,8 @@
         <h3>Stock Advisory  </h3>
         <p> Stock Long term holding Equity Return rewards . We are expert in Equity research and return will be good for long term holdings . </p>
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price">₹1000 Per Month</p> 
+        <!-- <p class="price">₹1000 Per Month</p> -->
+        <p class="price">₹1000 One Time Pay </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
 
@@ -167,6 +168,7 @@
   </script>
 </body>
 </html>
+
 
 
 
