--- a/services.html
+++ b/services.html
@@ -124,8 +124,9 @@
 
       --> 
       <div class="project-card">
-        <h3>Nifty Advisory Public Group Telegram </h3>
-        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>    
+        <h3>Derivative Trading Calls Demo Public Group Telegram 1 month Trial </h3>
+        <!-- <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p> -->
+        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p>
         <a href="https://t.me/predictionview" class="demo-btn">Join Now</a>                     
       </div><br><br>          
 
@@ -168,6 +169,7 @@
   </script>
 </body>
 </html>
+
 
 
 
