--- a/products.html
+++ b/products.html
@@ -189,7 +189,8 @@
         <h3>Derivative Prediction Tool - Premium</h3  >
         <p>Advanced prediction Nifty, Sensex , Crude Oil , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 200 , 1 Year License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price-sub">1 Year License</p>
+        <!-- <p class="price-sub">1 Year License</p> -->
+        <p class="price-sub">Full License</p>
         <p class="price">₹500</p> 
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSd2sqYrQHj9bKkGeSl3tBD9D-b4fKcBMPcDRstMJhu1ZBHlcA/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Buy Now</a>  
        
@@ -210,7 +211,8 @@
         <h3>Derivative Prediction Tool version commodities</h3>
         <p>Advanced prediction Nifty , Sensex , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 5000 , 1 Year License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price-sub">1 Year License</p>
+        <!-- <p class="price-sub">1 Year License</p> -->
+        <p class="price-sub">Full License</p>
         <p class="price">₹1000</p> 
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSd2sqYrQHj9bKkGeSl3tBD9D-b4fKcBMPcDRstMJhu1ZBHlcA/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Buy Now</a>  
        
@@ -240,3 +242,4 @@
   </script>
 </body>
 </html>
+
