--- a/products.html
+++ b/products.html
@@ -187,7 +187,7 @@
 
       <div class="project-card">
         <h3>Derivative Prediction Tool - Premium</h3  >
-        <p>Advanced prediction Nifty, Sensex , Crude Oil , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 200 , 1 Year License  , ML Trained Model . </p>
+        <p>Advanced prediction Nifty, Sensex , Crude Oil , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 200 , Full License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price-sub">1 Year License</p> -->
         <p class="price-sub">Full License</p>
@@ -209,7 +209,7 @@
 
       <div class="project-card">
         <h3>Derivative Prediction Tool version commodities</h3>
-        <p>Advanced prediction Nifty , Sensex , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 5000 , 1 Year License  , ML Trained Model . </p>
+        <p>Advanced prediction Nifty , Sensex , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 5000 , Full License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price-sub">1 Year License</p> -->
         <p class="price-sub">Full License</p>
@@ -242,5 +242,6 @@
   </script>
 </body>
 </html>
+
 
 
