--- a/course.html
+++ b/course.html
@@ -98,7 +98,8 @@
         <h3>Nifty Derivative Course</h3>
         <p>Nifty Trading Course 1 month , 3 month license Nifty software access CALL , PUT range 20 to 100 .   </p>
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price">₹50,000</p>     
+        <!-- <p class="price">₹50,000</p>  -->
+        <p class="price">₹880</p>  
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOf76pbqeLDVwZ2yv7Vg3l4sleP1QtnViaoFmUxRP-xUKXDw/viewform?usp=header" class="demo-btn">Join Now</a>     
 
     </div>
@@ -122,7 +123,8 @@
         <p>Business & Operational Strategy</p>        
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">12 Month Course</p>
-        <p class="price">₹80,000</p>     
+        <!-- <p class="price">₹80,000</p> -->
+        <p class="price">₹500</p>     
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklqHB6xX7cjO9AbFmUt8AeEUO290_wX8FKDOM3q5b4FiyMw/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Join Now</a>     
 
     </div>
@@ -272,6 +274,7 @@
   </script>
 </body>
 </html>
+
 
 
 
