--- a/course.html
+++ b/course.html
@@ -96,7 +96,7 @@
     <div class="projects">      
       <div class="project-card">
         <h3>Nifty Derivative Course</h3>
-        <p>Nifty Trading Course 1 month , 3 month license Nifty software access CALL , PUT range 20 to 100 .   </p>
+        <p>Nifty Trading Course 3 month , 3 month license Nifty software access CALL , PUT range 20 to 100 .   </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price">₹50,000</p>  -->
         <p class="price">₹880</p>  
@@ -113,7 +113,7 @@
     <div class="projects">      
       <div class="project-card">        
         <h3>Master of Business Administration (MBA) , Private Program                                                       </h3>
-        <p>Nifty Trading Course 12 month , 1 year license Nifty software access CALL , PUT range 20 to 100  ,  Weekly Reports .  </p>      
+        <!-- <p>3 month license Nifty software access CALL , PUT range 20 to 100  ,  Weekly Reports .  </p> -->     
         <p>Marketing Analytics</p>
         <p>Marketing and Business Strategy</p>
         <p>Business Models</p>
@@ -122,7 +122,7 @@
         <p>Pricing Analytics</p>
         <p>Business & Operational Strategy</p>        
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price-sub">12 Month Course</p>
+        <p class="price-sub">6 Month Course</p>
         <!-- <p class="price">₹80,000</p> -->
         <p class="price">₹500</p>     
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklqHB6xX7cjO9AbFmUt8AeEUO290_wX8FKDOM3q5b4FiyMw/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Join Now</a>     
@@ -274,6 +274,7 @@
   </script>
 </body>
 </html>
+
 
 
 
