--- a/course.html
+++ b/course.html
@@ -99,6 +99,7 @@
         <p>Nifty Trading Course 3 month , 3 month license Nifty software access CALL , PUT range 20 to 100 .   </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price">₹50,000</p>  -->
+        <p class="price-sub">6 Month Course</p>
         <p class="price">₹880</p>  
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOf76pbqeLDVwZ2yv7Vg3l4sleP1QtnViaoFmUxRP-xUKXDw/viewform?usp=header" class="demo-btn">Join Now</a>     
 
@@ -274,6 +275,7 @@
   </script>
 </body>
 </html>
+
 
 
 
