--- a/course.html
+++ b/course.html
@@ -96,7 +96,7 @@
     <div class="projects">      
       <div class="project-card">
         <h3>Nifty Derivative Course</h3>
-        <p>Nifty Trading Course 3 month , 3 month license Nifty software access CALL , PUT range 20 to 100 .   </p>
+        <p>Nifty Trading Course 6 month , Full license Nifty software access CALL , PUT range 20 to 200 .   </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price">₹50,000</p>  -->
         <p class="price-sub">6 Month Course</p>
@@ -115,13 +115,13 @@
       <div class="project-card">        
         <h3>Master of Business Administration (MBA) , Private Program                                                       </h3>
         <!-- <p>3 month license Nifty software access CALL , PUT range 20 to 100  ,  Weekly Reports .  </p> -->     
-        <p>Marketing Analytics</p>
-        <p>Marketing and Business Strategy</p>
-        <p>Business Models</p>
+        <!-- <p>Marketing Analytics</p> -->
+        <!-- <p>Marketing and Business Strategy</p> -->
+        <p>Business Fund Management</p>
         <p>Segmentation Strategies</p>
         <p>Predictive Analytics</p>
         <p>Pricing Analytics</p>
-        <p>Business & Operational Strategy</p>        
+        <p>Full License Nifty Call Put 20 200 </p>        
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">6 Month Course</p>
         <!-- <p class="price">₹80,000</p> -->
@@ -275,6 +275,7 @@
   </script>
 </body>
 </html>
+
 
 
 
