--- a/course.html
+++ b/course.html
@@ -100,6 +100,7 @@
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price">₹50,000</p>  -->
         <p class="price-sub">6 Month Course</p>
+        <p class="price-sub">Weekends Meet Link </p>
         <p class="price">₹880</p>  
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOf76pbqeLDVwZ2yv7Vg3l4sleP1QtnViaoFmUxRP-xUKXDw/viewform?usp=header" class="demo-btn">Join Now</a>     
 
@@ -124,6 +125,7 @@
         <p>Full License Nifty Call Put 20 200 </p>        
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">6 Month Course</p>
+        <p class="price-sub">Weekends Meet Link </p>
         <!-- <p class="price">₹80,000</p> -->
         <p class="price">₹500</p>     
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklqHB6xX7cjO9AbFmUt8AeEUO290_wX8FKDOM3q5b4FiyMw/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Join Now</a>     
@@ -275,6 +277,7 @@
   </script>
 </body>
 </html>
+
 
 
 
