--- a/services.html
+++ b/services.html
@@ -124,9 +124,8 @@
 
       --> 
       <div class="project-card">
-        <h3>Derivative Trading Calls Demo Public Group Telegram 1 month Trial </h3>
+        <h3>Prediction View App  </h3>
         <!-- <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p> -->
-        <p>Prediction View App </p>
         <p>Android App </p>
         <a href="https://drive.google.com/file/d/1OfO-Gas0XZ5wMNXWbTla9-8Zr_j3fKep/view?usp=sharing" class="demo-btn">Download Now </a>                     
       </div><br><br>          
@@ -178,6 +177,7 @@
   </script>
 </body>
 </html>
+
 
 
 
