--- a/products.html
+++ b/products.html
@@ -148,16 +148,29 @@
 
 
 
+      <div class="project-card">
+        <h3>Derivative Prediction Software - Trial </h3>
+        <p>Nifty Sensex prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 40   . ML Trained Model </p>
+        <!--
+        <h4 class="price-title">Pricing Details</h4>
+        <p class="price-sub">1 Month License</p>
+        <p class="price">₹100</p> 
+        -->    
+        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingToolsTrialIndexPrivate/" class="demo-btn">View</a>     
+        
+
+      </div>       
+
 
       <div class="project-card">
-        <h3>Derivative Prediction Tool - Basic</h3>
+        <h3>Derivative Prediction Software - Basic</h3>
         <p>Nifty Sensex prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 200   . ML Trained Model </p>
         <!--
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">1 Month License</p>
         <p class="price">₹100</p> 
         -->    
-        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingTools/" class="demo-btn">Derivative Tool</a>     
+        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingTools/" class="demo-btn">View</a>     
         
 
       </div> 
@@ -242,6 +255,7 @@
   </script>
 </body>
 </html>
+
 
 
 
