--- a/products.html
+++ b/products.html
@@ -207,7 +207,7 @@
     <div class="projects">
 
       <div class="project-card">
-        <h3>Derivative Prediction Tool - Premium</h3  >
+        <h3>Derivative Prediction Software - Premium</h3  >
         <p>Advanced prediction Nifty, Sensex , Crude Oil , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 200 , Full License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price-sub">1 Year License</p> -->
@@ -229,7 +229,7 @@
     <div class="projects">
 
       <div class="project-card">
-        <h3>Derivative Prediction Tool version commodities</h3>
+        <h3>Derivative Prediction Software version commodities</h3>
         <p>Advanced prediction Nifty , Sensex , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 5000 , Full License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price-sub">1 Year License</p> -->
@@ -263,6 +263,7 @@
   </script>
 </body>
 </html>
+
 
 
 
