--- a/services.html
+++ b/services.html
@@ -127,7 +127,7 @@
         <h3>Prediction View App  </h3>
         <!-- <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p> -->
         <p>Android App </p>
-        <a href="https://drive.google.com/file/d/1OfO-Gas0XZ5wMNXWbTla9-8Zr_j3fKep/view?usp=sharing" class="demo-btn">Download Now </a>                     
+        <a href="https://karthik2342323.github.io/PredictionViewOptionTrading/Prediction%20View.apk" class="demo-btn">Download Now </a>                     
       </div><br><br>          
 
         
@@ -177,6 +177,7 @@
   </script>
 </body>
 </html>
+
 
 
 
