--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
     <div class="projects">
       <div class="project-card">
         <h3>NIFTY 50</h3>
-        <img src="option.png?text=NIFTY+50+Chart" alt="Nifty 50 Chart" style="width:100%; border-radius:8px;">
+        
+        <!-- <img src="option.png?text=NIFTY+50+Chart" alt="Nifty 50 Chart" style="width:100%; border-radius:8px;">  -->
       </div>
       <div class="project-card">
         <h3>SENSEX</h3>
-        <img src="b.png?text=Sensex+Chart" alt="Sensex Chart" style="width:100%; border-radius:8px;">
+        
+        <!-- <img src="b.png?text=Sensex+Chart" alt="Sensex Chart" style="width:100%; border-radius:8px;">    -->  
       </div>
       <div class="project-card">
         <h3>BANK NIFTY</h3>
@@ -193,3 +195,4 @@
   </script>
 </body>
 </html>
+
