--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
       </div>
       <div class="project-card">
         <h3>BANK NIFTY</h3>
-        <img src="c.png?text=Bank+Nifty+Chart" alt="Bank Nifty Chart" style="width:100%; border-radius:8px;">
+        
+        <!-- <img src="c.png?text=Bank+Nifty+Chart" alt="Bank Nifty Chart" style="width:100%; border-radius:8px;"> -->
       </div>
       <div class="project-card">
         <h3>FINNIFTY</h3>
-        <img src="d.png?text=Finnifty+Chart" alt="Finnifty Chart" style="width:100%; border-radius:8px;">
+        <!-- <img src="d.png?text=Finnifty+Chart" alt="Finnifty Chart" style="width:100%; border-radius:8px;"> -->
       </div>
       <!--
       <div class="project-card">
@@ -195,4 +196,5 @@
   </script>
 </body>
 </html>
+
 
